--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -18,7 +18,8 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-            <li class="nav-item">
+        {{#sessionUser}}
+          <li class="nav-item">
               <a class="nav-link" href="/board/saveForm">글쓰기</a>
             </li>
             <li class="nav-item">
@@ -27,12 +28,16 @@
             <li class="nav-item">
               <a class="nav-link" href="/logout">로그아웃</a>
             </li>
+        {{/sessionUser}}
+        
+        {{^sessionUser}}
             <li class="nav-item">
               <a class="nav-link" href="/joinForm">회원가입</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/loginForm">로그인</a>
             </li>
+        {{/sessionUser}}
         </ul>
       </div>
     </div>
